Fix import statements in module overviews to use valid Python package names.

--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -286,8 +286,8 @@
     "                                break\n",
     "                \n",
     "                if all_items:\n",
-    "                    # Create import statement\n",
-    "                    package_name = cfg.lib_name\n",
+    "                    # Create import statement - replace hyphens with underscores for valid Python imports\n",
+    "                    package_name = cfg.lib_name.replace('-', '_')\n",
     "                    full_module_path = f\"{package_name}.{module.name}\"\n",
     "                    \n",
     "                    lines.append(\"```python\")\n",
@@ -303,15 +303,17 @@
     "                    lines.append(\")\")\n",
     "                    lines.append(\"```\")\n",
     "                else:\n",
-    "                    # Fallback if __all__ not found\n",
+    "                    # Fallback if __all__ not found - replace hyphens with underscores\n",
+    "                    package_name = cfg.lib_name.replace('-', '_')\n",
     "                    lines.append(\"```python\")\n",
-    "                    lines.append(f\"from {cfg.lib_name}.{module.name} import *\")\n",
+    "                    lines.append(f\"from {package_name}.{module.name} import *\")\n",
     "                    lines.append(\"```\")\n",
     "            \n",
     "            except Exception:\n",
-    "                # Fallback if parsing fails\n",
+    "                # Fallback if parsing fails - replace hyphens with underscores\n",
+    "                package_name = cfg.lib_name.replace('-', '_')\n",
     "                lines.append(\"```python\")\n",
-    "                lines.append(f\"from {cfg.lib_name}.{module.name} import *\")\n",
+    "                lines.append(f\"from {package_name}.{module.name} import *\")\n",
     "                lines.append(\"```\")\n",
     "        else:\n",
     "            # Fallback if Python file doesn't exist\n",
@@ -1035,7 +1037,7 @@
       "#### Import\n",
       "\n",
       "```python\n",
-      "from cjm-nbdev-overview.core import (\n",
+      "from cjm_nbdev_overview.core import (\n",
       "    NotebookInfo,\n",
       "    DirectoryInfo,\n",
       "    get_notebook_files,\n",
@@ -1139,7 +1141,7 @@
       "#### Import\n",
       "\n",
       "```python\n",
-      "from cjm-nbdev-overview.parsers import (\n",
+      "from cjm_nbdev_overview.parsers import (\n",
       "    FunctionInfo,\n",
       "    VariableInfo,\n",
       "    ClassInfo,\n",
@@ -1244,14 +1246,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e12efcc7-7f6d-4a52-8c35-2a84bd04fd56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd12ed1e-2226-4fd6-ae77-e7e89a18bdc2",
    "metadata": {},
    "outputs": [],
    "source": []
