--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -144,7 +144,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.core import (\n",
+    "from cjm_nbdev_overview.core import (\n",
     "    NotebookInfo,\n",
     "    DirectoryInfo,\n",
     "    get_notebook_files,\n",
@@ -226,7 +226,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.parsers import (\n",
+    "from cjm_nbdev_overview.parsers import (\n",
     "    FunctionInfo,\n",
     "    VariableInfo,\n",
     "    ClassInfo,\n",
@@ -389,7 +389,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.tree import (\n",
+    "from cjm_nbdev_overview.tree import (\n",
     "    generate_tree_lines,\n",
     "    generate_tree,\n",
     "    extract_notebook_info,\n",
@@ -483,7 +483,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.api_docs import (\n",
+    "from cjm_nbdev_overview.api_docs import (\n",
     "    format_function_doc,\n",
     "    format_class_doc,\n",
     "    format_variable_doc,\n",
@@ -644,7 +644,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.dependencies import (\n",
+    "from cjm_nbdev_overview.dependencies import (\n",
     "    ModuleDependency,\n",
     "    DependencyGraph,\n",
     "    extract_project_imports,\n",
@@ -745,7 +745,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.generators import (\n",
+    "from cjm_nbdev_overview.generators import (\n",
     "    create_folder_notebook,\n",
     "    generate_folder_notebook,\n",
     "    generate_all_folder_notebooks,\n",
@@ -798,7 +798,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm-nbdev-overview.cli import (\n",
+    "from cjm_nbdev_overview.cli import (\n",
     "    tree_cmd,\n",
     "    api_cmd,\n",
     "    deps_cmd,\n",
