Update Mermaid.js dependency diagram generation.

--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -733,12 +733,14 @@
     "    content += diagram  # diagram already includes ```mermaid wrapper\n",
     "    content += \"\\n\\n\"\n",
     "    \n",
-    "    # Add dependency matrix if there are dependencies\n",
+    "    # Count unique module pairs (cross-notebook dependencies)\n",
     "    if graph.dependencies:\n",
-    "        # Comment out the dependency matrix for now due to Markdown rendering issues\n",
-    "        # content += \"### Dependency Matrix\\n\\n\"\n",
-    "        # content += generate_dependency_matrix(graph)\n",
-    "        content += f\"*{len(graph.dependencies)} cross-module dependencies detected*\"\n",
+    "        # Get unique source-target pairs\n",
+    "        unique_deps = set()\n",
+    "        for dep in graph.dependencies:\n",
+    "            unique_deps.add((dep.source, dep.target))\n",
+    "        \n",
+    "        content += f\"*{len(unique_deps)} cross-module dependencies detected*\"\n",
     "    else:\n",
     "        content += \"No cross-module dependencies detected.\"\n",
     "    \n",
