--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -297,16 +297,23 @@
     "    \n",
     "    lines.append(\"\")  # Empty line for readability\n",
     "    \n",
-    "    # Add edges\n",
+    "    # Consolidate dependencies between same source and target\n",
+    "    dep_map = defaultdict(list)\n",
     "    for dep in graph.dependencies:\n",
-    "        if show_imports and dep.imported_names:\n",
-    "            # Show what's imported\n",
-    "            imports = ', '.join(dep.imported_names[:3])  # Limit to 3\n",
-    "            if len(dep.imported_names) > 3:\n",
+    "        key = (dep.source, dep.target)\n",
+    "        dep_map[key].extend(dep.imported_names)\n",
+    "    \n",
+    "    # Add edges\n",
+    "    for (source, target), imported_names in dep_map.items():\n",
+    "        if show_imports and imported_names:\n",
+    "            # Remove duplicates and show what's imported\n",
+    "            unique_imports = list(dict.fromkeys(imported_names))  # Preserve order while removing duplicates\n",
+    "            imports = ', '.join(unique_imports[:3])  # Limit to 3\n",
+    "            if len(unique_imports) > 3:\n",
     "                imports += '...'\n",
-    "            lines.append(f'    {dep.source} -->|\"{imports}\"| {dep.target}')\n",
+    "            lines.append(f'    {source} -->|\"{imports}\"| {target}')\n",
     "        else:\n",
-    "            lines.append(f\"    {dep.source} --> {dep.target}\")\n",
+    "            lines.append(f\"    {source} --> {target}\")\n",
     "    \n",
     "    # Add styling\n",
     "    lines.append(\"\")\n",
@@ -380,7 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8 modules with 14 dependencies\n"
+      "Found 7 modules with 15 dependencies\n"
      ]
     }
    ],
@@ -403,26 +410,27 @@
       "\n",
       "api_docs depends on:\n",
       "  - tree: *\n",
-      "  - core: *\n",
+      "  - dependencies: *\n",
       "  - parsers: *\n",
+      "  - core: *\n",
       "\n",
       "cli depends on:\n",
       "  - tree: *\n",
-      "  - parsers: *\n",
       "  - api_docs: *\n",
       "  - dependencies: *\n",
+      "  - parsers: *\n",
       "\n",
       "dependencies depends on:\n",
-      "  - core: *\n",
       "  - parsers: *\n",
+      "  - core: *\n",
       "\n",
       "generators depends on:\n",
       "  - tree: *\n",
       "  - core: *\n",
       "\n",
       "parsers depends on:\n",
-      "  - core: *\n",
       "  - tree: extract_notebook_info\n",
+      "  - core: *\n",
       "\n",
       "tree depends on:\n",
       "  - core: *\n"
@@ -461,22 +469,22 @@
       "    dependencies[dependencies<br/>Dependency Analysis and Visualization]\n",
       "    generators[generators<br/>Auto-generation Utilities]\n",
       "    cli[cli<br/>Command-Line Interface]\n",
-      "    07_api[07_api]\n",
       "\n",
-      "    parsers --> core\n",
       "    parsers --> tree\n",
+      "    parsers --> core\n",
       "    tree --> core\n",
       "    api_docs --> tree\n",
-      "    api_docs --> core\n",
+      "    api_docs --> dependencies\n",
       "    api_docs --> parsers\n",
-      "    dependencies --> core\n",
+      "    api_docs --> core\n",
       "    dependencies --> parsers\n",
+      "    dependencies --> core\n",
       "    generators --> tree\n",
       "    generators --> core\n",
       "    cli --> tree\n",
-      "    cli --> parsers\n",
       "    cli --> api_docs\n",
       "    cli --> dependencies\n",
+      "    cli --> parsers\n",
       "\n",
       "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
       "```\n"
@@ -502,16 +510,15 @@
       "\n",
       "## Dependency Matrix\n",
       "\n",
-      "| Module | 07_api | api_docs | cli | core | dependencies | generators | parsers | tree |\n",
-      "|--------|----|----|----|----|----|----|----|----|\n",
-      "| 07_api |   |   |   |   |   |   |   |   |\n",
-      "| api_docs |   |   |   | ✓ |   |   | ✓ | ✓ |\n",
-      "| cli |   | ✓ |   |   | ✓ |   | ✓ | ✓ |\n",
-      "| core |   |   |   |   |   |   |   |   |\n",
-      "| dependencies |   |   |   | ✓ |   |   | ✓ |   |\n",
-      "| generators |   |   |   | ✓ |   |   |   | ✓ |\n",
-      "| parsers |   |   |   | ✓ |   |   |   | ✓ |\n",
-      "| tree |   |   |   | ✓ |   |   |   |   |\n"
+      "| Module | api_docs | cli | core | dependencies | generators | parsers | tree |\n",
+      "|--------|----|----|----|----|----|----|----|\n",
+      "| api_docs |   |   | ✓ | ✓ |   | ✓ | ✓ |\n",
+      "| cli | ✓ |   |   | ✓ |   | ✓ | ✓ |\n",
+      "| core |   |   |   |   |   |   |   |\n",
+      "| dependencies |   |   | ✓ |   |   | ✓ |   |\n",
+      "| generators |   |   | ✓ |   |   |   | ✓ |\n",
+      "| parsers |   |   | ✓ |   |   |   | ✓ |\n",
+      "| tree |   |   | ✓ |   |   |   |   |\n"
      ]
     }
    ],
