--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -151,13 +151,13 @@
     "                attr_line += f\"  # {attr.comment}\"\n",
     "            lines.append(attr_line)\n",
     "    \n",
-    "    # Add selected methods\n",
+    "    # Add all methods\n",
     "    if cls.methods:\n",
     "        lines.append(\"    \")\n",
     "        # Show __init__ and public methods only\n",
     "        shown_methods = [m for m in cls.methods if not m.name.startswith('_') or m.name == '__init__']\n",
     "        \n",
-    "        for i, method in enumerate(shown_methods[:5]):  # Limit to first 5 methods\n",
+    "        for i, method in enumerate(shown_methods):  # Show all methods, no truncation\n",
     "            if i > 0:\n",
     "                lines.append(\"    \")\n",
     "            \n",
@@ -173,9 +173,6 @@
     "            # Add method docstring\n",
     "            if method.docstring:\n",
     "                lines.append(f'        \"{method.docstring.strip()}\"')\n",
-    "        \n",
-    "        if len(shown_methods) > 5:\n",
-    "            lines.append(\"        ...\")\n",
     "    \n",
     "    lines.append(\"```\")\n",
     "    \n",
@@ -356,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68geyuru13y",
+   "id": "124e2794-a0d3-4122-8918-efd6c93c124a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,8 +367,17 @@
     "        for func in functions:\n",
     "            lines.append(format_function_doc(func))\n",
     "            lines.append(\"\")\n",
-    "    return lines\n",
-    "\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb72117-78de-4220-98cb-b082a8915791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def _generate_classes_section(classes: List[ClassInfo]          # List of classes\n",
     "                            ) -> List[str]:                     # Section lines\n",
     "    \"Generate the classes section of module documentation\"\n",
@@ -381,8 +387,17 @@
     "        for cls in classes:\n",
     "            lines.append(format_class_doc(cls))\n",
     "            lines.append(\"\")\n",
-    "    return lines\n",
-    "\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845e3a43-7216-40a3-b89c-21951651c028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def _generate_variables_section(variables: List[VariableInfo]   # List of variables\n",
     "                              ) -> List[str]:                   # Section lines\n",
     "    \"Generate the variables section of module documentation\"\n",
@@ -452,7 +467,7 @@
     "    # Parse and document each notebook\n",
     "    for nb_path in notebooks:\n",
     "        # Skip index notebooks\n",
-    "        if nb_path.stem in ['index', '00_index']:\n",
+    "        if nb_path.stem in ['index']:\n",
     "            continue\n",
     "            \n",
     "        try:\n",
