Handle reserved words in Mermaid diagrams.

--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -282,17 +282,32 @@
     "                           show_imports: bool = False   # Show imported names\n",
     "                           ) -> str:                    # Mermaid diagram code\n",
     "    \"Generate a Mermaid.js dependency diagram from a dependency graph\"\n",
+    "    \n",
+    "    # Define known Mermaid reserved keywords that need escaping\n",
+    "    RESERVED_KEYWORDS = {\n",
+    "        'style', 'end', 'default', 'class', 'classDef', 'click', 'graph', \n",
+    "        'subgraph', 'direction', 'TD', 'LR', 'TB', 'RL', 'BT'\n",
+    "    }\n",
+    "    \n",
+    "    def escape_node_name(name: str) -> str:\n",
+    "        \"Escape node names that conflict with Mermaid reserved keywords\"\n",
+    "        if name.lower() in RESERVED_KEYWORDS:\n",
+    "            # Add suffix to avoid keyword conflicts\n",
+    "            return name + \"_mod\"\n",
+    "        return name\n",
+    "    \n",
     "    lines = []\n",
     "    lines.append(f\"```mermaid\")\n",
     "    lines.append(f\"graph {direction}\")\n",
     "    \n",
     "    # Add nodes with descriptions\n",
     "    for module_name, module_info in graph.modules.items():\n",
-    "        # Create node label\n",
+    "        escaped_name = escape_node_name(module_name)\n",
+    "        # Create node label with original module name for display\n",
     "        if module_info.title:\n",
-    "            label = f\"{module_name}[{module_name}<br/>{module_info.title}]\"\n",
+    "            label = f\"{escaped_name}[{module_name}<br/>{module_info.title}]\"\n",
     "        else:\n",
-    "            label = f\"{module_name}[{module_name}]\"\n",
+    "            label = f\"{escaped_name}[{module_name}]\"\n",
     "        lines.append(f\"    {label}\")\n",
     "    \n",
     "    lines.append(\"\")  # Empty line for readability\n",
@@ -305,15 +320,18 @@
     "    \n",
     "    # Add edges\n",
     "    for (source, target), imported_names in dep_map.items():\n",
+    "        escaped_source = escape_node_name(source)\n",
+    "        escaped_target = escape_node_name(target)\n",
+    "        \n",
     "        if show_imports and imported_names:\n",
     "            # Remove duplicates and show what's imported\n",
     "            unique_imports = list(dict.fromkeys(imported_names))  # Preserve order while removing duplicates\n",
     "            imports = ', '.join(unique_imports[:3])  # Limit to 3\n",
     "            if len(unique_imports) > 3:\n",
     "                imports += '...'\n",
-    "            lines.append(f'    {source} -->|\"{imports}\"| {target}')\n",
+    "            lines.append(f'    {escaped_source} -->|\"{imports}\"| {escaped_target}')\n",
     "        else:\n",
-    "            lines.append(f\"    {source} --> {target}\")\n",
+    "            lines.append(f\"    {escaped_source} --> {escaped_target}\")\n",
     "    \n",
     "    # Add styling\n",
     "    lines.append(\"\")\n",
@@ -387,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 7 modules with 15 dependencies\n"
+      "Found 7 modules with 19 dependencies\n"
      ]
     }
    ],
@@ -409,24 +427,28 @@
      "text": [
       "\n",
       "api_docs depends on:\n",
-      "  - tree: *\n",
       "  - dependencies: *\n",
       "  - parsers: *\n",
       "  - core: *\n",
+      "  - tree: *\n",
       "\n",
       "cli depends on:\n",
-      "  - tree: *\n",
-      "  - api_docs: *\n",
-      "  - dependencies: *\n",
       "  - parsers: *\n",
+      "  - api_docs: *\n",
+      "  - tree: *\n",
+      "  - dependencies: *\n",
       "\n",
       "dependencies depends on:\n",
+      "  - parsers: ModuleInfo\n",
+      "  - dependencies: ModuleDependency\n",
+      "  - dependencies: generate_mermaid_diagram\n",
       "  - parsers: *\n",
+      "  - dependencies: DependencyGraph\n",
       "  - core: *\n",
       "\n",
       "generators depends on:\n",
-      "  - tree: *\n",
       "  - core: *\n",
+      "  - tree: *\n",
       "\n",
       "parsers depends on:\n",
       "  - tree: extract_notebook_info\n",
@@ -457,34 +479,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "## Dependency Diagram\n",
+      "## Test Diagram with Reserved Keywords Handled\n",
       "\n",
       "```mermaid\n",
       "graph LR\n",
-      "    core[core<br/>Core Utilities]\n",
-      "    parsers[parsers<br/>Notebook and Module Parsing]\n",
-      "    tree[tree<br/>Directory Tree Visualization]\n",
-      "    api_docs[api_docs<br/>API Documentation Generation]\n",
-      "    dependencies[dependencies<br/>Dependency Analysis and Visualization]\n",
-      "    generators[generators<br/>Auto-generation Utilities]\n",
-      "    cli[cli<br/>Command-Line Interface]\n",
+      "    colors[colors<br/>Colors]\n",
+      "    core[core<br/>Core]\n",
+      "    examples[examples<br/>Practical Usage Examples]\n",
+      "    layout[layout<br/>Layout]\n",
+      "    modern[modern<br/>Modern]\n",
+      "    StyleNode[style<br/>Style]\n",
+      "    types[types<br/>Type Definitions]\n",
+      "    validation[validation<br/>Validation]\n",
+      "    variants[variants<br/>Variants]\n",
       "\n",
-      "    parsers --> tree\n",
-      "    parsers --> core\n",
-      "    tree --> core\n",
-      "    api_docs --> tree\n",
-      "    api_docs --> dependencies\n",
-      "    api_docs --> parsers\n",
-      "    api_docs --> core\n",
-      "    dependencies --> parsers\n",
-      "    dependencies --> core\n",
-      "    generators --> tree\n",
-      "    generators --> core\n",
-      "    cli --> tree\n",
-      "    cli --> api_docs\n",
-      "    cli --> dependencies\n",
-      "    cli --> parsers\n",
+      "    colors --> validation\n",
+      "    colors --> types\n",
+      "    core --> types\n",
+      "    core --> validation\n",
+      "    examples --> validation\n",
+      "    examples --> variants\n",
+      "    examples --> core\n",
+      "    examples --> modern\n",
+      "    examples --> colors\n",
+      "    examples --> layout\n",
+      "    examples --> StyleNode\n",
+      "    layout --> core\n",
+      "    layout --> types\n",
+      "    layout --> validation\n",
+      "    modern --> core\n",
+      "    StyleNode --> core\n",
+      "    StyleNode --> types\n",
+      "    StyleNode --> colors\n",
+      "    StyleNode --> validation\n",
+      "    variants --> core\n",
       "\n",
       "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
       "```\n"
@@ -492,9 +520,71 @@
     }
    ],
    "source": [
-    "# Generate Mermaid diagram\n",
-    "print(\"\\n## Dependency Diagram\\n\")\n",
-    "print(generate_mermaid_diagram(graph, direction=\"LR\"))"
+    "# Test with a sample graph that includes reserved keywords\n",
+    "from cjm_nbdev_overview.dependencies import DependencyGraph, ModuleDependency, generate_mermaid_diagram\n",
+    "from cjm_nbdev_overview.parsers import ModuleInfo\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Create test graph with reserved keywords\n",
+    "test_graph = DependencyGraph()\n",
+    "\n",
+    "# Add modules including ones with reserved keywords\n",
+    "modules_data = [\n",
+    "    (\"colors\", \"Colors\"),\n",
+    "    (\"core\", \"Core\"),\n",
+    "    (\"examples\", \"Practical Usage Examples\"),\n",
+    "    (\"layout\", \"Layout\"),\n",
+    "    (\"modern\", \"Modern\"),\n",
+    "    (\"style\", \"Style\"),  # This should trigger the reserved keyword handling\n",
+    "    (\"types\", \"Type Definitions\"),\n",
+    "    (\"validation\", \"Validation\"),\n",
+    "    (\"variants\", \"Variants\")\n",
+    "]\n",
+    "\n",
+    "for name, title in modules_data:\n",
+    "    module = ModuleInfo(\n",
+    "        path=Path(f\"nbs/{name}.ipynb\"),\n",
+    "        name=name,\n",
+    "        title=title,\n",
+    "        description=None,\n",
+    "        functions=[],\n",
+    "        classes=[],\n",
+    "        variables=[],\n",
+    "        imports=[]\n",
+    "    )\n",
+    "    test_graph.add_module(module)\n",
+    "\n",
+    "# Add some test dependencies\n",
+    "test_dependencies = [\n",
+    "    (\"colors\", \"validation\"),\n",
+    "    (\"colors\", \"types\"),\n",
+    "    (\"core\", \"types\"),\n",
+    "    (\"core\", \"validation\"),\n",
+    "    (\"examples\", \"validation\"),\n",
+    "    (\"examples\", \"variants\"),\n",
+    "    (\"examples\", \"core\"),\n",
+    "    (\"examples\", \"modern\"),\n",
+    "    (\"examples\", \"colors\"),\n",
+    "    (\"examples\", \"layout\"),\n",
+    "    (\"examples\", \"style\"),  # This should work with escaped style\n",
+    "    (\"layout\", \"core\"),\n",
+    "    (\"layout\", \"types\"),\n",
+    "    (\"layout\", \"validation\"),\n",
+    "    (\"modern\", \"core\"),\n",
+    "    (\"style\", \"core\"),      # This should work with escaped style\n",
+    "    (\"style\", \"types\"),     # This should work with escaped style\n",
+    "    (\"style\", \"colors\"),    # This should work with escaped style\n",
+    "    (\"style\", \"validation\"),# This should work with escaped style\n",
+    "    (\"variants\", \"core\")\n",
+    "]\n",
+    "\n",
+    "for source, target in test_dependencies:\n",
+    "    dep = ModuleDependency(source=source, target=target, import_type=\"from\", imported_names=[\"*\"])\n",
+    "    test_graph.add_dependency(dep)\n",
+    "\n",
+    "# Generate diagram that should now work without parse errors\n",
+    "print(\"## Test Diagram with Reserved Keywords Handled\\n\")\n",
+    "print(generate_mermaid_diagram(test_graph, direction=\"LR\"))"
    ]
   },
   {
@@ -515,7 +605,7 @@
       "| api_docs |   |   | ✓ | ✓ |   | ✓ | ✓ |\n",
       "| cli | ✓ |   |   | ✓ |   | ✓ | ✓ |\n",
       "| core |   |   |   |   |   |   |   |\n",
-      "| dependencies |   |   | ✓ |   |   | ✓ |   |\n",
+      "| dependencies |   |   | ✓ | ✓ |   | ✓ |   |\n",
       "| generators |   |   | ✓ |   |   |   | ✓ |\n",
       "| parsers |   |   | ✓ |   |   |   | ✓ |\n",
       "| tree |   |   | ✓ |   |   |   |   |\n"
