--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -72,23 +72,24 @@
     "    parsers --> tree\n",
     "    parsers --> core\n",
     "    tree --> core\n",
-    "    api_docs --> dependencies\n",
     "    api_docs --> parsers\n",
+    "    api_docs --> dependencies\n",
     "    api_docs --> tree\n",
     "    api_docs --> core\n",
-    "    dependencies --> core\n",
+    "    dependencies --> dependencies\n",
     "    dependencies --> parsers\n",
+    "    dependencies --> core\n",
     "    generators --> core\n",
     "    generators --> tree\n",
-    "    cli --> dependencies\n",
-    "    cli --> api_docs\n",
     "    cli --> parsers\n",
+    "    cli --> dependencies\n",
     "    cli --> tree\n",
+    "    cli --> api_docs\n",
     "\n",
     "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
     "```\n",
     "\n",
-    "*15 cross-module dependencies detected*"
+    "*16 cross-module dependencies detected*"
    ]
   },
   {
