Update the project to strip Markdown links from  comments in generated trees.

--- a/nbs/02_tree.ipynb
+++ b/nbs/02_tree.ipynb
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32ebcf7-f180-4876-810a-a15c9d8a32a9",
+   "id": "10ef658c-e463-46ab-a257-60a8c3cc22c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,23 @@
     "## Basic Tree Generation\n",
     "\n",
     "First, let's implement the basic tree generation without descriptions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0738c4e1-b427-429b-93ec-67aa63de7e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def strip_markdown_links(\n",
+    "    text: str  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Strip Markdown links from text, keeping only the link text\"\n",
+    "    # Pattern matches [link text](url)\n",
+    "    pattern = r'\\[([^\\]]+)\\]\\([^\\)]+\\)'\n",
+    "    return re.sub(pattern, r'\\1', text)"
    ]
   },
   {
@@ -335,7 +352,9 @@
     "            \n",
     "            # Format line with description\n",
     "            if nb_info.description:\n",
-    "                line = f\"{connector}{nb_path.name}\".ljust(28) + f\" # {nb_info.description}\"\n",
+    "                # Strip Markdown links from description\n",
+    "                clean_description = strip_markdown_links(nb_info.description)\n",
+    "                line = f\"{connector}{nb_path.name}\".ljust(28) + f\" # {clean_description}\"\n",
     "            else:\n",
     "                line = f\"{connector}{nb_path.name}\"\n",
     "            \n",
@@ -399,7 +418,9 @@
     "    for nb_path in notebooks:\n",
     "        nb_info = extract_notebook_info(nb_path)\n",
     "        if nb_info.description:\n",
-    "            all_items.append((nb_path, 'file', f\"# {nb_info.description}\"))\n",
+    "            # Strip Markdown links from description\n",
+    "            clean_description = strip_markdown_links(nb_info.description)\n",
+    "            all_items.append((nb_path, 'file', f\"# {clean_description}\"))\n",
     "        else:\n",
     "            all_items.append((nb_path, 'file', \"\"))\n",
     "    \n",
@@ -441,6 +462,58 @@
     "## Testing Tree with Descriptions\n",
     "\n",
     "Let's test the enhanced tree on our project:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "y3e2hgwbc88",
+   "metadata": {},
+   "source": [
+    "### Testing Markdown Link Stripping\n",
+    "\n",
+    "Let's test that Markdown links are properly stripped from descriptions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1txlfcp2q5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing strip_markdown_links function:\n",
+      "\n",
+      "Original: Buttons allow the user to take actions or make choices. [daisyUI docs](https://daisyui.com/components/button/)\n",
+      "Stripped: Buttons allow the user to take actions or make choices. daisyUI docs\n",
+      "\n",
+      "Original: A simple description with no links\n",
+      "Stripped: A simple description with no links\n",
+      "\n",
+      "Original: Multiple [link one](http://example.com) and [link two](http://example.com/2) in text\n",
+      "Stripped: Multiple link one and link two in text\n",
+      "\n",
+      "Original: [Link at start](http://example.com) of description\n",
+      "Stripped: Link at start of description\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the strip_markdown_links function\n",
+    "test_cases = [\n",
+    "    \"Buttons allow the user to take actions or make choices. [daisyUI docs](https://daisyui.com/components/button/)\",\n",
+    "    \"A simple description with no links\",\n",
+    "    \"Multiple [link one](http://example.com) and [link two](http://example.com/2) in text\",\n",
+    "    \"[Link at start](http://example.com) of description\"\n",
+    "]\n",
+    "\n",
+    "print(\"Testing strip_markdown_links function:\")\n",
+    "for test in test_cases:\n",
+    "    result = strip_markdown_links(test)\n",
+    "    print(f\"\\nOriginal: {test}\")\n",
+    "    print(f\"Stripped: {result}\")"
    ]
   },
   {
@@ -573,7 +646,9 @@
     "        if show_descriptions:\n",
     "            nb_info = extract_notebook_info(item)\n",
     "            if nb_info.description:\n",
-    "                line = f\"{prefix}{connector}{item.name}\".ljust(40) + f\" # {nb_info.description}\"\n",
+    "                # Strip Markdown links from description\n",
+    "                clean_description = strip_markdown_links(nb_info.description)\n",
+    "                line = f\"{prefix}{connector}{item.name}\".ljust(40) + f\" # {clean_description}\"\n",
     "            else:\n",
     "                line = f\"{prefix}{connector}{item.name}\"\n",
     "        else:\n",
