--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -544,7 +544,10 @@
     "def _sort_notebooks_by_prefix(notebooks: List[Path]             # List of notebook paths\n",
     "                             ) -> List[Path]:                   # Sorted notebook paths\n",
     "    \"Sort notebooks by their numeric prefix, putting non-numbered notebooks at the end\"\n",
-    "    def sort_key(nb_path: Path) -> tuple:\n",
+    "    def sort_key(\n",
+    "        nb_path: Path  # TODO: Add description\n",
+    "    ) -> tuple:  # TODO: Add return description\n",
+    "        \"TODO: Add function description\"\n",
     "        match = re.match(r'^(\\d+)', nb_path.stem)\n",
     "        if match:\n",
     "            return (int(match.group(1)), nb_path.stem)\n",
