--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -289,7 +289,9 @@
     "        'subgraph', 'direction', 'TD', 'LR', 'TB', 'RL', 'BT'\n",
     "    }\n",
     "    \n",
-    "    def escape_node_name(name: str) -> str:\n",
+    "    def escape_node_name(\n",
+    "        name: str  # TODO: Add description\n",
+    "    ) -> str:  # TODO: Add return description\n",
     "        \"Escape node names that conflict with Mermaid reserved keywords\"\n",
     "        if name.lower() in RESERVED_KEYWORDS:\n",
     "            # Add suffix to avoid keyword conflicts\n",
