--- a/nbs/06_cli.ipynb
+++ b/nbs/06_cli.ipynb
@@ -66,7 +66,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def tree_cmd(args):                                     # Command line arguments\n",
+    "def tree_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
     "    \"Generate tree visualization for nbdev project\"\n",
     "    # Get project path\n",
     "    path = Path(args.path) if args.path else None\n",
@@ -412,7 +414,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def main():\n",
+    "def main(\n",
+    "): # TODO: Add type hint\n",
     "    \"Main CLI entry point for nbdev-overview\"\n",
     "    parser = argparse.ArgumentParser(\n",
     "        prog='nbdev-overview',\n",
