--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -73,18 +73,18 @@
     "    parsers --> core\n",
     "    tree --> core\n",
     "    api_docs --> parsers\n",
-    "    api_docs --> dependencies\n",
     "    api_docs --> tree\n",
     "    api_docs --> core\n",
-    "    dependencies --> dependencies\n",
+    "    api_docs --> dependencies\n",
     "    dependencies --> parsers\n",
+    "    dependencies --> dependencies\n",
     "    dependencies --> core\n",
-    "    generators --> core\n",
     "    generators --> tree\n",
-    "    cli --> parsers\n",
-    "    cli --> dependencies\n",
+    "    generators --> core\n",
     "    cli --> tree\n",
+    "    cli --> parsers\n",
     "    cli --> api_docs\n",
+    "    cli --> dependencies\n",
     "\n",
     "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
     "```\n",
@@ -391,6 +391,7 @@
     "\n",
     "```python\n",
     "from cjm_nbdev_overview.tree import (\n",
+    "    strip_markdown_links,\n",
     "    generate_tree_lines,\n",
     "    generate_tree,\n",
     "    extract_notebook_info,\n",
@@ -401,6 +402,13 @@
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def strip_markdown_links(\n",
+    "    text: str  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Strip Markdown links from text, keeping only the link text\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def generate_tree_lines(path: Path,                         # Directory to visualize\n",
@@ -813,15 +821,9 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def tree_cmd(args):                                     # Command line arguments\n",
-    "    \"Generate tree visualization for nbdev project\"\n",
-    "    # Get project path\n",
-    "    path = Path(args.path) if args.path else None\n",
-    "    \n",
-    "    # Determine exclude_index flag (default True, but --include-index overrides)\n",
-    "    exclude_index = not getattr(args, 'include_index', False)\n",
-    "    \n",
-    "    if args.basic\n",
+    "def tree_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
     "    \"Generate tree visualization for nbdev project\"\n",
     "```\n",
     "\n",
@@ -861,7 +863,8 @@
     "```\n",
     "\n",
     "```python\n",
-    "def main()\n",
+    "def main(\n",
+    "): # TODO: Add type hint\n",
     "    \"Main CLI entry point for nbdev-overview\"\n",
     "```\n"
    ]
